[package]
name = "json-stream-parser"
version = "0.1.2"
edition = "2021"
description = "A JSON parser that is capable of parsing incomplete JSON strings that are streamed in."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"