[package]
name = "json-stream-parser"
version = "0.1.3"
edition = "2021"
rust-version = "1.65.0"
description = "A JSON parser that is capable of parsing incomplete JSON strings that are streamed in."
license = "MIT"
readme = "README.md"
repository = "https://github.com/json-stream/json-stream-rust"
keywords = ["json", "parser", "stream", "reactive", "streaming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"